# src/main/java/com/messenger/simplemessenger/user/model/UserEntity.java
@@ -1,17 +1,16 @@
 package com.messenger.simplemessenger.user.model;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.messenger.simplemessenger.authentication.model.AuthUserEntity;
 import com.messenger.simplemessenger.chat.model.ChatMemberEntity;
 import com.messenger.simplemessenger.core.BaseEntity;
 import com.messenger.simplemessenger.chat.model.ChatEntity;
 import com.messenger.simplemessenger.chat.model.MessageEntity;
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.OneToMany;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.lang.Nullable;
 
+import javax.validation.constraints.NotNull;
 import java.time.Instant;
 import java.util.List;
 
@@ -21,17 +20,18 @@ import java.util.List;
 @ToString(callSuper = true)
 @Data
 @NoArgsConstructor
+@RequiredArgsConstructor
+@AllArgsConstructor
+@Builder
 public class UserEntity extends BaseEntity {
 
     @NonNull
-    @Column(name = "surname")
-    private String surname;
+    @Column(name = "first_name")
+    private String firstName;
 
-    @NonNull
     @Column(name = "last_name")
     private String lastName;
 
-    @NonNull
     @Column(name = "birth_day")
     private Instant birthday;
 
@@ -55,4 +55,11 @@ public class UserEntity extends BaseEntity {
     @JsonIgnore
     @ToString.Exclude
     private List<MessageEntity> publishedMessages;
+
+    @OneToOne()
+    @JoinColumn(name = "auth_user_id")
+    @NotNull
+    @ToString.Exclude
+    private AuthUserEntity authUser;
+
 }
