# src/main/java/com/messenger/simplemessenger/user/model/dto/User.java
@@ -1,10 +1,13 @@
 package com.messenger.simplemessenger.user.model.dto;
+import com.messenger.simplemessenger.authentication.model.dto.AuthUser;
+import com.messenger.simplemessenger.chat.model.dto.ChatMember;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NonNull;
 import org.springframework.lang.Nullable;
 
 import java.time.Instant;
+import java.util.List;
 import java.util.UUID;
 
 @Builder
@@ -20,7 +23,7 @@ public class User {
     private Instant lastModifiedDate;
 
     @NonNull
-    private String surname;
+    private String firstName;
 
     @NonNull
     private String lastName;
@@ -30,4 +33,10 @@ public class User {
 
     @Nullable
     private String description;
+
+    @Nullable
+    private List<ChatMember> enteredChats;
+
+    @NonNull
+    private AuthUser authUser;
 }
